# CS462-Capstone-Project

./: CMakeLists.txt  LICENSE  Makefile  README.md  check.cpp  fileIO.h  makefile.txt  packetIO.h
src/: Makefile  client.cpp  fileIO.cpp  fileIO.h  packet.h  packetIO.cpp  packetIO.h  ping.cpp  ping.h  prompts.cpp  prompts.h  server.cpp  sitErrors.cpp  sitErrors.h
src/tests/: testClient.cpp  testServer.cpp
